# myQTpractice

./: README.md
untitled03/: CMakeLists.txt  main.cpp  student.cpp  student.h  teacher.cpp  teacher.h  widget.cpp  widget.h
untitled04/: CMakeLists.txt
untitled05/: CMakeLists.txt  mainwindow.cpp
untitled09/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
untitled10/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
untitled11/: CMakeLists.txt  main.cpp  mylavel.cpp  mylavel.h  mywidget.cpp  mywidget.ui  qrc.qrc  widget.cpp  widget.h  widget.ui
untitled11/asc/: ascii_art.py
untitled13/: sec.qrc  untitled13.pro  widget.cpp  widget.h  widget.ui
